# dwagoon

./: .gitignore  .gitmodules  CHANGES.md  DESIGN_ASSESSMENT.md  FEATURE_IMPLEMENTATION.md  MANIFEST.in  NAME_IDEAS  README  Rice.psm1  Scrape-Reddit.psm1  TEST_README.md  TODO  USAGE.md  Update-Wal.ps1  Wallpaper.psm1  pyproject.toml  pywal16_bug_report.md  reddit.py  scrape_reddit.py  test_boring_detection.py  test_boring_detection_real.py
dwagoon.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
python/reddit/: __main__.py  download.py  message.py  wal.py
python/rice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/dwagoon/: toosmall.py  urls.py
src/dwagoon/scripts/: rice.py  savewal.py
src/dwagoon/windows/: Dwagoon.psm1
src/yodawg/: __init__.py  blacklist.py  cli.py  config.py  download.py  imageanalysis.py  message.py  reddit.py  rice.py  savewall.py  toosmall.py  urls.py
src/yodawg/scripts/: UpdateTerminal.ps1  reddit.py
wezterm/: wezterm-wal.toml  wezterm.lua
windows/: Dwagoon.psm1  Rice.ps1  Rice.psm1  Setup.ps1  Update-Wal.ps1
